--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "ag-grid-react": "^28.0.0",
     "bootstrap": "^5.2.3",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.13",
+    "days": "^1.1.1",
     "devextreme": "^22.1.3",
     "devextreme-react": "^22.1.3",
     "file-saver": "^2.0.5",
@@ -46,6 +48,7 @@
     "react-toastify": "^9.0.5",
     "recharts": "^2.15.1",
     "styled-components": "^5.3.5",
+    "xlsx": "^0.18.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -55,6 +58,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/styled-components": "^5.1.25",
+    "@types/xlsx": "^0.0.35",
     "autoprefixer": "^10.4.14",
     "eslint": "8.18.0",
     "eslint-config-next": "12.2.0",
