--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@progress/kendo-react-excel-export": "^5.5.0",
     "ag-grid-community": "^28.0.2",
     "ag-grid-react": "^28.0.0",
+    "bcryptjs": "^3.0.2",
     "bootstrap": "^5.2.3",
+    "canvas": "^3.1.2",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.13",
     "days": "^1.1.1",
@@ -26,13 +28,15 @@
     "formidable": "^3.5.2",
     "formik": "^2.2.9",
     "html-to-text": "^8.2.1",
+    "js-cookie": "^3.0.5",
     "jschardet": "^3.0.0",
-    "jspdf": "^3.0.0",
+    "jsdom": "^26.1.0",
+    "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "mongoose": "^6.4.1",
     "mysql": "^2.18.1",
     "next": "latest",
-    "nodemailer": "^6.8.0",
+    "nodemailer": "^6.10.1",
     "papaparse": "^5.4.0",
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
@@ -52,7 +56,9 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/file-saver": "^2.0.5",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^18.0.0",
     "@types/papaparse": "^5.3.7",
     "@types/react": "^18.0.14",
