--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@progress/kendo-react-excel-export": "^5.5.0",
     "ag-grid-community": "^28.0.2",
     "ag-grid-react": "^28.0.0",
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^3.0.3",
     "bootstrap": "^5.2.3",
     "canvas": "^3.1.2",
+    "csv-parse": "^6.1.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.13",
     "days": "^1.1.1",
@@ -25,7 +26,7 @@
     "devextreme-react": "^22.1.3",
     "file-saver": "^2.0.5",
     "firebase": "^9.8.4",
-    "formidable": "^3.5.2",
+    "formidable": "^3.5.4",
     "formik": "^2.2.9",
     "html-to-text": "^8.2.1",
     "js-cookie": "^3.0.5",
@@ -34,6 +35,7 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "mongo-sanitize": "^1.1.0",
+    "mongodb": "^6.20.0",
     "mongoose": "^6.4.1",
     "mysql": "^2.18.1",
     "next": "latest",
