--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "mongodb": "^6.20.0",
     "mongoose": "^6.4.1",
     "mysql": "^2.18.1",
-    "next": "latest",
+    "next": "15.4.10",
     "nodemailer": "^6.10.1",
     "papaparse": "^5.4.0",
     "react": "^18.2.0",
